--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>blaplafla.todolist.demo/blaplafla.todolist.HelloApplication</mainClass>
+                            <mainClass>blaplafla.todolist.demo/blaplafla.todolist.GuiStarter</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
