--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,12 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
 *.iws
-.idea/workspace.xml
+*.iml
 *.ipr
 
 ### Eclipse ###
@@ -32,4 +36,3 @@ build/
 
 ### Mac OS ###
 .DS_Store
-
