--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>blaplafla.todolist.todolist/blaplafla.todolist.todolist.HelloApplication
+                            <mainClass>blaplafla.todolist.CliStarter
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
